@startuml
skinparam classAttributeIconSize 0

package "UI (View)" {
  class StockSearchView {
    - controller: StockSearchController
    - username: String
    + onSearchSubmitted(keywords: String)
    + showResults(output: StockSearchOutputData)
  }
}

package "Interface Adapters" {
  class StockSearchController {
    - inputBoundary: StockSearchInputBoundary
    - watchlistRepository: WatchlistRepository
    + search(keywords: String): void
    + isWatched(username: String, symbol: String): boolean
    + setWatched(username: String, symbol: String, name: String, exchange: String, watched: boolean): void
    + getWatchedSymbols(username: String): List<String>
  }

  class StockSearchPresenter implements StockSearchOutputBoundary {
    - lastOutput: StockSearchOutputData
    + present(output: StockSearchOutputData): void
    + getLastOutput(): StockSearchOutputData
  }
}

package "Use Cases" {
  interface StockSearchInputBoundary {
    + execute(input: StockSearchInputData): StockSearchOutputData
  }

  interface StockSearchOutputBoundary {
    + present(output: StockSearchOutputData): void
  }

  class StockSearchInteractor implements StockSearchInputBoundary {
    - api: AlphaVantageAPI
    - outputBoundary: StockSearchOutputBoundary
    + execute(input: StockSearchInputData): StockSearchOutputData
  }

  class StockSearchInputData {
    - keywords: String
    + getKeywords(): String
  }

  class StockSearchOutputData {
    - success: boolean
    - message: String
    - results: List<StockSearchResult>
    + isSuccess(): boolean
    + getMessage(): String
    + getResults(): List<StockSearchResult>
  }
}

package "Data / Frameworks" {
  class AlphaVantageAPI {
    + searchStocks(keywords: String): List<StockSearchResult>
    + getQuote(symbol: String): StockQuote
    + getTimeSeries(symbol: String, interval: String): List<StockPriceData>
  }

  class StockSearchResult {
    - symbol: String
    - name: String
    - exchange: String
    - region: String
  }

  interface WatchlistRepository {
    + isWatched(username: String, symbol: String): boolean
    + addWatched(username: String, symbol: String, name: String, exchange: String): void
    + removeWatched(username: String, symbol: String): void
    + findSymbolsByUsername(username: String): List<String>
  }

  class JdbcWatchlistRepository implements WatchlistRepository {
    - dataSource: DataSource
  }
}

' ===== Dependencies (Clean Architecture flow) =====

' View -> Controller
StockSearchView --> StockSearchController : search()/watch actions

' Controller -> Input Boundary + DTOs + Repository
StockSearchController --> StockSearchInputBoundary : execute(input)
StockSearchController --> StockSearchInputData
StockSearchController --> WatchlistRepository

' Interactor -> API + Output Data + Output Boundary
StockSearchInteractor --> AlphaVantageAPI : searchStocks(...)
StockSearchInteractor --> StockSearchOutputData
StockSearchOutputData --> StockSearchResult
StockSearchInteractor --> StockSearchOutputBoundary : present(output)

' Presenter -> View
StockSearchPresenter --> StockSearchView : showResults(...)

' Concrete data implementation
JdbcWatchlistRepository ..|> WatchlistRepository
AlphaVantageAPI --> StockSearchResult

@enduml